Fix placeholder positioning on IE

--- a/src/scripts/modules/find-content/find-content.less
+++ b/src/scripts/modules/find-content/find-content.less
@@ -50,8 +50,8 @@
 
   > input {
     .flex(4; 4; 33%);
+    padding: 0 37px 0 10px;
     height: @bar-height;
-    padding-right: 37px;
     font-size: 1.2em;
     color: @gray-lighter;
     background: @gray-medium url(images/icons/search-white.png) no-repeat 98% center;
